feature: add profile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
         </header>
         <main> 
             <section class="profile"> 
-                
+                <img
+                src="./images/avatar.png"
+                class="profile__avatar"
+                alt="Jacques Cousteau profile picture"
+                /> 
+                <article class="profile__info">
+                    <p class="profile__info-name"> Jacques Cousteau </p>
+                    <p class="profile__info-descriptor"> Explorer</p>
+                    <button class="profile__info-edit-button"> </button>
+                </article>
+                <button class="profile__add-button"> </button>
             </section>
         </main>
         <footer class="footer"> 
