--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
   <body class="page">
     <header class="header">
       <img src="./images/logo.svg" class="logo" alt="Around The U.S logo" />
-      <div class="border"></div>
     </header>
     <main>
       <section class="profile">
         <img
-          src="./images/avatar.png"
+          src="./images/avatar.jpg"
           class="profile__avatar"
           alt="Jacques Cousteau profile picture"
         />
-        <article class="profile__info">
-          <p class="profile__info-name">Jacques Cousteau</p>
+        <div class="profile__info">
+          <h1 class="profile__info-name">Jacques Cousteau</h1>
           <p class="profile__info-descriptor">Explorer</p>
-          <button class="profile__info-edit-button"> </button>
-        </article>
-        <button class="profile__add-button"> </button>
+          <button type="button" class="profile__info-edit-button" aria-label="edit-profile-info"> </button>
+        </div>
+        <button type="button" class="profile__add-button" aria-label="add-post"> </button>
       </section>
     
-    <section class="popup__container"> 
-      <button class="popup__close-button"> </button>
-      <form class="profile-edit-form"> 
+    <section class="popup">
+      <div class="popup__container"> 
+        <button type="button" class="popup__close-button" aria-label="close-edit-profile-form"> </button>
+        <form class="profile-edit-form" name="profile-edit-form"> 
         <h2 class="profile-edit-form__title"> Edit profile</h2>
         <input 
         id="name"
@@ -46,8 +46,9 @@
         type="text"
         placeholder="About Me"
         > 
-        <button class="profile-edit-form__save-button" type="submit"> Save </button>
+        <button type="submit" class="profile-edit-form__save-button"> Save </button>
       </form>
+      </div> 
     </section>
     
       <section class="posts-grid">
@@ -58,8 +59,8 @@
             class="post__image"
           />
           <div class="post__caption">
-            <p class="post__caption-text">Yosemite Valley</p>
-            <button class="post__caption-like"> </button>
+            <h3 class="post__caption-text">Yosemite Valley</h3>
+            <button type="button" class="post__caption-like" aria-label="like-post"> </button>
           </div>
         </article>
         <article class="posts-grid__post post">
@@ -69,8 +70,8 @@
             alt="Lake Louise"
           />
           <div class="post__caption">
-            <p class="post__caption-text">Lake Louise</p>
-            <button class="post__caption-like"> </button>
+            <h3 class="post__caption-text">Lake Louise</h3>
+            <button type="button" class="post__caption-like" aria-label="like-post"> </button>
           </div>
         </article>
 
@@ -81,8 +82,8 @@
             alt="Bald Mountains at sunrise"
           />
           <div class="post__caption">
-            <p class="post__caption-text">Bald Mountains</p>
-            <button class="post__caption-like"> </button>
+            <h3 class="post__caption-text">Bald Mountains</h3>
+            <button type="button" class="post__caption-like" aria-label="like-post"> </button>
           </div>
         </article>
         <article class="posts-grid__post post">
@@ -92,8 +93,8 @@
             alt="Latemar mountains in night sky"
           />
           <div class="post__caption">
-            <p class="post__caption-text">Latemar</p>
-            <button class="post__caption-like"> </button>
+            <h3 class="post__caption-text">Latemar</h3>
+            <button type="button" class="post__caption-like" aria-label="like-post"> </button>
           </div>
         </article>
         <article class="posts-grid__post post">
@@ -103,8 +104,8 @@
             alt="mountain along lake"
           />
           <div class="post__caption">
-            <p class="post__caption-text">Vanoise Nationational Park </p>
-            <button class="post__caption-like"> </button>
+            <h3 class="post__caption-text">Vanoise Nationational Park </h3>
+            <button type="button" class="post__caption-like" aria-label="like-post"> </button>
           </div>
         </article>
 
@@ -115,8 +116,8 @@
             alt="boat dock along with mountain"
           />
           <div class="post__caption">
-            <p class="post__caption-text">Lago di Braies</p>
-            <button class="post__caption-like"> </button>
+            <h3 class="post__caption-text">Lago di Braies</h3>
+            <button type="button" class="post__caption-like" aria-label="like-post"> </button>
           </div>
         </article>
       </section>
