--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     </header>
     <main>
       <section class="profile">
-        <img
+        <div class="profile__avatar"> 
+          <img
           src="./images/avatar.jpg"
-          class="profile__avatar"
+          class="profile__avatar__image"
           alt="Jacques Cousteau profile picture"
         />
+        </div>
         <div class="profile__info">
           <h1 class="profile__info-name">Jacques Cousteau</h1>
           <p class="profile__info-descriptor">Explorer</p>
