fix: fix more automatic testing errors

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="profile__avatar"> 
           <img
           src="./images/avatar.jpg"
-          class="profile__avatar__image"
+          class="profile__avatar-image"
           alt="Jacques Cousteau profile picture"
         />
         </div>
