fix: address first round of reviewer comments

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             class="form__input"
             type="text"
             placeholder="Name"
+            required
             > 
 
             <input 
@@ -47,6 +48,7 @@
             class="form__input"
             type="text"
             placeholder="About Me"
+            required
             > 
             <button type="submit" class="form__save-button"> Save </button>
           </form>
@@ -64,6 +66,7 @@
             class="form__input"
             type="text"
             placeholder="Title"
+            required
             > 
 
             <input 
@@ -72,6 +75,7 @@
             class="form__input"
             type="text"
             placeholder="Image link"
+            required
             > 
             <button id="create-post-button" type="submit" class="form__save-button"> Create </button>
           </form>
