--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
     <footer class="footer">
       <p class="footer__text"> © 2021 Around The U.S.</p>
     </footer>
-    <script src="./scripts/script.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/script.js"> </script>
+    <script type="module" src="./scripts/utils.js"> </script> 
+    <script type="module" src="./scripts/Card.js"> </script>
+    <script type="module" src="./scripts/FormValidator.js"> </script>
   </body>
 </html>
