--- a/index.html
+++ b/index.html
@@ -131,5 +131,6 @@
     <script type="module" src="./scripts/utils.js"> </script> 
     <script type="module" src="./scripts/Card.js"> </script>
     <script type="module" src="./scripts/FormValidator.js"> </script>
+    <script type="module" src="./scripts/Popup.js"> </script>
   </body>
 </html>
