--- a/index.html
+++ b/index.html
@@ -133,5 +133,6 @@
     <script type="module" src="./scripts/FormValidator.js"> </script>
     <script type="module" src="./scripts/Popup.js"> </script>
     <script type="module" src="./scripts/Section.js"> </script>
+    <script type="module" src="./scripts/PopupWithImage.js"> </script>
   </body>
 </html>
