fix: revise per reviwer comments

--- a/src/index.html
+++ b/src/index.html
@@ -77,14 +77,14 @@
               <span class="form__input-error title-input-error"> </span>
 
             <input 
-            id="image-link"
-            name="image-link"
+            id="link"
+            name="link"
             class="form__input"
             type="url"
             placeholder="Image link"
             required
             > 
-            <span class="form__input-error image-link-input-error"> </span>
+            <span class="form__input-error link-input-error"> </span>
             <button id="create-post-button" type="submit" class="form__save-button"> Create </button>
           </form>
         </div> 
