feature: load user info and initial cards from server

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
         />
         </div>
         <div class="profile__info">
-          <h1 class="profile__info-name">Jacques Cousteau</h1>
-          <p class="profile__info-descriptor">Explorer</p>
+          <h1 class="profile__info-name"> </h1>
+          <p class="profile__info-descriptor"> </p>
           <button type="button" class="profile__info-edit-button" aria-label="edit-profile-info"> </button>
         </div>
         <button type="button" class="profile__add-button" aria-label="add-post"> </button>
