feature: add confirm delete form and update avatar form

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
     </header>
     <main>
       <section class="profile">
-        <button class="profile__update-avatar-button" type="button" aria-label="update-profile-picture"> </button>
         <div class="profile__avatar"> 
+          <button class="profile__update-avatar-button" type="button" aria-label="update-profile-picture"> </button>
           <img
           id="avatar-image"
           class="profile__avatar-image"
@@ -60,7 +60,7 @@
         </div> 
       </section>
 
-      <section id="update-avatar-form" class="popup"> 
+      <section id="update-avatar-popup" class="popup"> 
         <div class="popup__container"> 
           <button id="close-image-button" type="button" class="popup__close-button" aria-label="close-popup"> </button>
           <form class="update-avatar-form form" name="update-avatar-form"> 
