feature: delete post and saving display

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
             maxlength="200"
             > 
             <span class="form__input-error about-me-input-error"> </span>
-            <button type="submit" class="form__save-button"> Save </button>
+            <button id="save-profile-button" type="submit" class="form__save-button"> Save </button>
           </form>
         </div> 
       </section>
