fix: resolve automatic testing issues

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 
       <section id="update-avatar-popup" class="popup"> 
         <div class="popup__container"> 
-          <button id="close-image-button" type="button" class="popup__close-button" aria-label="close-popup"> </button>
+          <button id="close-update-avatar-button" type="button" class="popup__close-button" aria-label="close-popup"> </button>
           <form class="update-avatar-form form" name="update-avatar-form"> 
             <h2 class="form__title"> Change profile picture </h2>
             <input 
@@ -112,10 +112,11 @@
 
       <section id="confirm-delete-popup" class="popup"> 
         <div class="popup__container"> 
-          <button id="close-image-button" type="button" class="popup__close-button" aria-label="close-popup"> </button>
+          <button id="close-confirmation-button" type="button" class="popup__close-button" aria-label="close-popup"> </button>
           <form class="confirm-delete-form form" name="delete-confirmation-form"> 
             <h2 class="form__title form__title-delete"> Are you sure? </h2>
             <button id="confirm-delete-button" type="submit" class="form__save-button"> Yes </button>
+          </form>
         </div>
       </section>
 
