refactor: refactor popupWithForm and popupWithConfirmation

--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,8 @@
             > 
             <span class="form__input-error name-input-error"> </span>
             <input 
-            id="about-me"
-            name="about-me"
+            id="about"
+            name="about"
             class="form__input"
             type="text"
             placeholder="About Me"
@@ -54,7 +54,7 @@
             minlength="2"
             maxlength="200"
             > 
-            <span class="form__input-error about-me-input-error"> </span>
+            <span class="form__input-error about-input-error"> </span>
             <button id="save-profile-button" type="submit" class="form__save-button"> Save </button>
           </form>
         </div> 
