fix: black hearts and bin icons remain after page load where appropriate

--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,7 @@
             <div class="post__caption">
               <h3 class="post__caption-text"> </h3>
               <div class="post__caption-interactions"> 
-                <button type="button" class="post__caption-like__button" aria-label="like-post"> </button>
+                <button type="button" class="post__caption-like__button post__caption-like__button_active" aria-label="like-post"> </button>
                 <p class="post__caption-likes"> 0 </p>
               </div>
             </div>
